--- a/sass/main.sass
+++ b/sass/main.sass
@@ -240,6 +240,7 @@ b, strong
 		outline: 0 !important
 .slick-next
 	padding: 66px 0px !important
+	right: -25px !important
 	&::before
 		color: #17c2a4 !important
 .slick-prev
@@ -339,6 +340,45 @@ b, strong
 			background: #c8d9e5
 			height: 4px
 			width: 86px
+.section-portfolio
+	padding: 120px 0 115px
+	background: #ffdd99
+	color: #393939
+	p 
+		margin: 25px 0 55px
+	h3
+		margin: 45px 0 35px
+		font-size: 20px
+	h2
+		font-size: 40px
+		text-transform: uppercase
+		padding: 0
+		line-height: 40px
+		& ~ span
+			display: inline-block
+			background: #e5c37f
+			height: 4px
+			width: 86px
+.wrapper
+	.active 
+		background: #fff  !important  
+.wrapper
+	.tabs
+		.tab
+			margin-bottom: 30px
+			width: 85px
+			cursor: pointer
+			border-radius: 5px
+			display: inline-block
+			padding: 12px 0
+			background: #ebc985
+	.tab_item 
+		img
+			width: 100%
+		div
+			padding: 0
+			margin: 0
+
 
 
 
